[tool.poetry]
name = "xai"
version = "0.1.0"
description = ""
authors = ["Benjamin Cretois <benjamin.cretois@nina.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchvision = "^0.18.1"
grad-cam = "^1.5.2"
opencv-python = "^4.10.0.84"
numpy = "^2.0.1"
lightning = "^2.3.3"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
